Modified URL in static index.html file

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="./public/profile-picture.jpg" />
+        <link rel="icon" href="./profile-picture.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wonder Full</title>
     </head>
