--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="./profile-picture.jpg" />
+        <link id="favicon"  rel="icon" href="#" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Wonder Full</title>
+        <title>FullStack Solutions | Ahmed</title>
     </head>
     <body>
         <div id="root"></div>
