Made necessary vite modifications for deployment

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
         <link id="favicon"  rel="icon" href="#" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FullStack Solutions | Ahmed</title>
+        <base href="/portofolio/">
     </head>
     <body>
         <div id="root"></div>
